--- a/package.json
+++ b/package.json
@@ -8,15 +8,35 @@
 		"start": "next start",
 		"lint": "next lint",
 		"prepare": "husky",
-		"prisma:push": "dotenv -e .env.local -- npx prisma db push"
+		"prisma:push": "dotenv -e .env.local -- npx prisma db push",
+		"prisma:studio": "dotenv -e .env.local -- npx prisma studio"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.9.0",
 		"@prisma/client": "^5.17.0",
+		"@radix-ui/react-checkbox": "^1.1.1",
+		"@radix-ui/react-dialog": "^1.1.1",
+		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-popover": "^1.1.1",
+		"@radix-ui/react-separator": "^1.1.0",
+		"@radix-ui/react-slot": "^1.1.0",
+		"@types/bcrypt": "^5.0.2",
+		"bcrypt": "^5.1.1",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
 		"dotenv": "^16.4.5",
 		"dotenv-cli": "^7.4.2",
+		"lucide-react": "^0.416.0",
 		"next": "14.2.5",
+		"next-safe-action": "^7.4.3",
+		"next-themes": "^0.3.0",
 		"react": "^18",
-		"react-dom": "^18"
+		"react-dom": "^18",
+		"react-hook-form": "^7.52.1",
+		"sonner": "^1.5.0",
+		"tailwind-merge": "^2.4.0",
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.8.3",
