--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
 		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@types/bcrypt": "^5.0.2",
+		"@types/jsonwebtoken": "^9.0.6",
 		"bcrypt": "^5.1.1",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"dotenv": "^16.4.5",
 		"dotenv-cli": "^7.4.2",
+		"jose": "^5.6.3",
+		"jsonwebtoken": "^9.0.2",
 		"lucide-react": "^0.416.0",
 		"next": "14.2.5",
 		"next-safe-action": "^7.4.3",
