--- a/package.json
+++ b/package.json
@@ -18,22 +18,27 @@
 		"@radix-ui/react-dialog": "^1.1.1",
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-popover": "^1.1.1",
+		"@radix-ui/react-select": "^2.1.1",
 		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
+		"@tanstack/react-query": "^5.51.21",
 		"@types/bcrypt": "^5.0.2",
 		"@types/jsonwebtoken": "^9.0.6",
 		"bcrypt": "^5.1.1",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"date-fns": "^3.6.0",
 		"dotenv": "^16.4.5",
 		"dotenv-cli": "^7.4.2",
 		"jose": "^5.6.3",
 		"jsonwebtoken": "^9.0.2",
+		"ldrs": "^1.0.2",
 		"lucide-react": "^0.416.0",
 		"next": "14.2.5",
 		"next-safe-action": "^7.4.3",
 		"next-themes": "^0.3.0",
 		"react": "^18",
+		"react-day-picker": "8.10.1",
 		"react-dom": "^18",
 		"react-hook-form": "^7.52.1",
 		"sonner": "^1.5.0",
