FEAT(travel form): Finished the travel form (front + back)

--- a/package.json
+++ b/package.json
@@ -1,64 +1,65 @@
 {
-	"name": "nextjs-with-bun",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint",
-		"prepare": "husky",
-		"prisma:push": "dotenv -e .env.local -- npx prisma db push",
-		"prisma:studio": "dotenv -e .env.local -- npx prisma studio"
-	},
-	"dependencies": {
-		"@hookform/resolvers": "^3.9.0",
-		"@prisma/client": "^5.17.0",
-		"@radix-ui/react-checkbox": "^1.1.1",
-		"@radix-ui/react-dialog": "^1.1.1",
-		"@radix-ui/react-label": "^2.1.0",
-		"@radix-ui/react-popover": "^1.1.1",
-		"@radix-ui/react-select": "^2.1.1",
-		"@radix-ui/react-separator": "^1.1.0",
-		"@radix-ui/react-slot": "^1.1.0",
-		"@tanstack/react-query": "^5.51.21",
-		"@types/bcrypt": "^5.0.2",
-		"@types/jsonwebtoken": "^9.0.6",
-		"bcrypt": "^5.1.1",
-		"class-variance-authority": "^0.7.0",
-		"clsx": "^2.1.1",
-		"date-fns": "^3.6.0",
-		"dotenv": "^16.4.5",
-		"dotenv-cli": "^7.4.2",
-		"jose": "^5.6.3",
-		"jsonwebtoken": "^9.0.2",
-		"ldrs": "^1.0.2",
-		"lucide-react": "^0.416.0",
-		"next": "14.2.5",
-		"next-safe-action": "^7.4.3",
-		"next-themes": "^0.3.0",
-		"react": "^18",
-		"react-day-picker": "8.10.1",
-		"react-dom": "^18",
-		"react-hook-form": "^7.52.1",
-		"sonner": "^1.5.0",
-		"tailwind-merge": "^2.4.0",
-		"tailwindcss-animate": "^1.0.7",
-		"zod": "^3.23.8"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "1.8.3",
-		"@commitlint/cli": "^19.3.0",
-		"@commitlint/config-angular": "^19.3.0",
-		"@commitlint/config-conventional": "^19.2.2",
-		"@types/node": "^20",
-		"@types/react": "^18",
-		"@types/react-dom": "^18",
-		"bun-types": "^1.1.20",
-		"husky": "^9.1.1",
-		"postcss": "^8",
-		"prisma": "^5.17.0",
-		"tailwindcss": "^3.4.6",
-		"typescript": "^5"
-	}
+  "name": "nextjs-with-bun",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "prepare": "husky",
+    "prisma:push": "dotenv -e .env.local -- npx prisma db push",
+    "prisma:studio": "dotenv -e .env.local -- npx prisma studio"
+  },
+  "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "@prisma/client": "^5.17.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
+    "@tanstack/react-query": "^5.51.21",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
+    "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
+    "dotenv-cli": "^7.4.2",
+    "jose": "^5.6.3",
+    "jsonwebtoken": "^9.0.2",
+    "ldrs": "^1.0.2",
+    "lucide-react": "^0.416.0",
+    "next": "14.2.5",
+    "next-safe-action": "^7.4.3",
+    "next-themes": "^0.3.0",
+    "react": "^18",
+    "react-day-picker": "8.10.1",
+    "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "1.8.3",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-angular": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "bun-types": "^1.1.20",
+    "husky": "^9.1.1",
+    "postcss": "^8",
+    "prisma": "^5.17.0",
+    "tailwindcss": "^3.4.6",
+    "typescript": "^5"
+  }
 }
