--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "postcss": "^8",
     "prisma": "^5.17.0",
     "tailwindcss": "^3.4.6",
+    "tailwindcss-highlights": "^1.0.0",
     "typescript": "^5"
   }
 }
