BUILD(package.json): Added the postinstall script for prisma generate

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"start": "next start",
 		"lint": "next lint",
 		"prepare": "husky",
+		"postinstall": "npx prisma generate",
 		"prisma:push": "dotenv -e .env.local -- npx prisma db push",
 		"prisma:studio": "dotenv -e .env.local -- npx prisma studio"
 	},
